tests/snapshots/r#mod__rfc7809__fullcal@1.snap
---
source: tests/mod.rs
expression: cal2.generate()
---
BEGIN:VCALENDAR
PRODID:-//Ximian//NONSGML Evolution Calendar//EN
VERSION:2.0
BEGIN:VTIMEZONE
TZID:GMT
TZID-ALIAS-OF:Etc/GMT
LAST-MODIFIED:20260124T185655Z
X-LIC-LOCATION:GMT
X-PROLEPTIC-TZNAME:GMT
BEGIN:STANDARD
TZNAME:GMT
TZOFFSETFROM:+0000
TZOFFSETTO:+0000
DTSTART:16010101T000000
END:STANDARD
END:VTIMEZONE
BEGIN:VTIMEZONE
TZID:Pacific/Honolulu
LAST-MODIFIED:20260124T185655Z
X-LIC-LOCATION:Pacific/Honolulu
X-PROLEPTIC-TZNAME:LMT
BEGIN:STANDARD
TZNAME:HST
TZOFFSETFROM:-103126
TZOFFSETTO:-1030
DTSTART:18960113T120000
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:HDT
TZOFFSETFROM:-1030
TZOFFSETTO:-0930
DTSTART:19330430T020000
END:DAYLIGHT
BEGIN:STANDARD
TZNAME:HST
TZOFFSETFROM:-0930
TZOFFSETTO:-1030
DTSTART:19330521T120000
RDATE:19450930T020000
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:HWT
TZOFFSETFROM:-1030
TZOFFSETTO:-0930
DTSTART:19420209T020000
END:DAYLIGHT
BEGIN:DAYLIGHT
TZNAME:HPT
TZOFFSETFROM:-0930
TZOFFSETTO:-0930
DTSTART:19450814T133000
END:DAYLIGHT
BEGIN:STANDARD
TZNAME:HST
TZOFFSETFROM:-1030
TZOFFSETTO:-1000
DTSTART:19470608T020000
END:STANDARD
END:VTIMEZONE
BEGIN:VJOURNAL
UID:84f728973b37b1cb9abf7556adde789b780779f7
DTSTAMP:20250726T130653Z
SUMMARY:journal entry!
X-CUSTOM-OK-WOW;TZID=GMT:20250726T130707Z
DTSTART;TZID=Pacific/Honolulu:20250726T130323Z
CLASS:PRIVATE
DESCRIPTION:description\n\nnice
SEQUENCE:1
CREATED:20250726T130707Z
LAST-MODIFIED:20250726T130707Z
X-EVOLUTION-CALDAV-ETAG:0af7d703351f3eed3c08491bdcb10a4c138181cc6be73d5b58a
 a13ccab898b55
END:VJOURNAL
END:VCALENDAR
