tests/snapshots/r#mod__rfc7809__rfc7809@0.snap
---
source: tests/mod.rs
expression: cal.generate()
---
BEGIN:VCALENDAR
VERSION:2.0
CALSCALE:GREGORIAN
PRODID:-//SabreDAV//SabreDAV//EN
BEGIN:VTIMEZONE
TZID:CET
TZID-ALIAS-OF:Europe/Brussels
LAST-MODIFIED:20260124T185655Z
X-LIC-LOCATION:CET
X-PROLEPTIC-TZNAME:LMT
BEGIN:DAYLIGHT
DTSTART:19810329T020000
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
TZNAME:CEST
TZOFFSETFROM:+0100
TZOFFSETTO:+0200
END:DAYLIGHT
BEGIN:STANDARD
DTSTART:19961027T030000
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
TZNAME:CET
TZOFFSETFROM:+0200
TZOFFSETTO:+0100
END:STANDARD
END:VTIMEZONE
BEGIN:VTIMEZONE
TZID:Europe/Berlin
LAST-MODIFIED:20260124T185655Z
X-LIC-LOCATION:Europe/Berlin
X-PROLEPTIC-TZNAME:LMT
BEGIN:DAYLIGHT
DTSTART:19810329T020000
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
TZNAME:CEST
TZOFFSETFROM:+0100
TZOFFSETTO:+0200
END:DAYLIGHT
BEGIN:STANDARD
DTSTART:19961027T030000
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
TZNAME:CET
TZOFFSETFROM:+0200
TZOFFSETTO:+0100
END:STANDARD
END:VTIMEZONE
BEGIN:VEVENT
DTSTAMP:20201204T082107Z
LAST-MODIFIED:20201204T082107Z
SEQUENCE:2
UID:6bec1263-c5f4-4446-8a0c-10d960a6e06e
DTSTART;TZID=CET:20201225T150000
DTEND;TZID=Europe/Berlin:20201225T223000
SUMMARY:Omit VTIMEZONE
END:VEVENT
END:VCALENDAR
