tests/snapshots/r#mod__rfc7809__rfc7809@2.snap
---
source: tests/mod.rs
expression: cal.generate()
---
BEGIN:VCALENDAR
PRODID:-//Ximian//NONSGML Evolution Calendar//EN
VERSION:2.0
METHOD:PUBLISH
BEGIN:VTIMEZONE
TZID:Pacific/Honolulu
LAST-MODIFIED:20260124T185655Z
X-LIC-LOCATION:Pacific/Honolulu
X-PROLEPTIC-TZNAME:LMT
END:VTIMEZONE
BEGIN:VTODO
UID:89b13d12c2142cc66192932e1e560ed344dfb174
DTSTAMP:20250726T112618Z
SUMMARY:amazing task
DTSTART;VALUE=DATE:20250804
DUE;TZID=Pacific/Honolulu:20250726T130323Z
PERCENT-COMPLETE:0
CLASS:PUBLIC
ESTIMATED-DURATION:P1D
SEQUENCE:1
CREATED:20250726T130323Z
LAST-MODIFIED:20250726T130323Z
X-EVOLUTION-CALDAV-ETAG:302e353d3134d1104500f9d9153454e6e21c5da41ae8a5fd26f
 8b0d98ee34979
END:VTODO
END:VCALENDAR
